--- a/nuevoBarucck/servicios.html
+++ b/nuevoBarucck/servicios.html
@@ -84,31 +84,35 @@
               <div class="slide" data-anchor="slide1">
                   <div class="container ">
                     <a id="move-right"  href="experiencia.html">
-                  <div class="col-md-12">
-                    <div class="gif" style="text-align: center;">
-                      <img src="img/gifs/diseño-gif.gif" class="img">
-                    </div>
-                  </div>
-                  <div class="col-md-12 top lists info-service ">
+                      <div class="col-md-6">
+                        <div class="large">
+                           <h3 class="font-large">
+                             <svg viewBox="0 0 1280 720">
+                              <text text-anchor="middle" x="50%" y="50%" style="font-size:3em;">DISEÑO</text>
+                            </svg>
+                          </h3>
+                        </div>
+                      </div>
+                      <div class="col-md-6 top lists info-service ">
 
-                    <h3 class="color-design">DISEÑO</h3>
-                    <p>Inyectamos <span class="saltarin">creatividad</span> y versatilidad a la imagen de tu marca y productos. <span class="weight">Un buen diseño es el embajador exitoso de tu marca. Contamos con equipo especializado en diseño:</span></p>
-                    <div class="col-md-6">
-                      <ul>
-                      <li> <img src="img/icons/checked.png" class="img-list">Corporativo</li>
-                      <li> <img src="img/icons/checked.png" class="img-list">De empaque</li>
-                      <li> <img src="img/icons/checked.png" class="img-list">Identidad Corporativa</li>
-                    </ul>
-                    </div>
-                    <div class="col-md-6">
-                      <ul>
-                      <li> <img src="img/icons/checked.png" class="img-list">Folletería</li>
-                      <li> <img src="img/icons/checked.png" class="img-list">Presentaciones ejecutivas / Brochures</li>
-                    </ul>
-                    </div>
 
-                  </div>
-                  </a>
+                      <p>Inyectamos <span class="saltarin">creatividad</span> y versatilidad a la imagen de tu marca y productos. <span class="weight">Un buen diseño es el embajador exitoso de tu marca. Contamos con equipo especializado en diseño:</span></p>
+                      <div class="col-md-6">
+                        <ul>
+                        <li> <img src="img/icons/point.png" class="img-list">Corporativo</li>
+                        <li> <img src="img/icons/point.png" class="img-list">De empaque</li>
+                        <li> <img src="img/icons/point.png" class="img-list">Identidad Corporativa</li>
+                      </ul>
+                      </div>
+                      <div class="col-md-6">
+                        <ul>
+                        <li> <img src="img/icons/point.png" class="img-list">Folletería</li>
+                        <li> <img src="img/icons/point.png" class="img-list">Presentaciones ejecutivas / Brochures</li>
+                      </ul>
+                      </div>
+
+                    </div>
+                    </a>
 
                 </div>
 
@@ -132,7 +136,7 @@
                   </div>
                   <div class="col-md-12 top lists info-service ">
 
-                    <h3 class="color-design">WEB</h3>
+                    <h3 class="font-large">WEB</h3>
                     <p>Si quieres mejorar o incursionar en la web <span class="weight-bold">¡déjanos apoyarte!</span> Deja que tus clientes te encuentren más fácilmente en la web. Contamos con desarrolladores que crean sitios web:</p>
                     <div class="col-md-6">
                       <ul>
@@ -169,7 +173,7 @@
                   </div>
                   <div class="col-md-12 top lists info-service ">
 
-                    <h3 class="color-design">ECOMMERCE</h3>
+                    <h3 class="font-large">ECOMMERCE</h3>
                     <p>Aumenta tus ventas de una manera eficaz y vanguardista a través de un nuevo canal digital.<br> Vender en línea es hoy ya un modelo de negocio exitoso probado, al que personas quieren incursionar, nosotros te apoyamos con:</p>
                     <div class="col-md-6">
                       <ul>
@@ -278,7 +282,7 @@
           sectionsColor: ['#fff', '#fff', '#fff','#000'],
           licenseKey: "OPEN-SOURCE-GPLV3-LICENSE",
       		autoScrolling:true,
-          navigation:true,
+          navigation:false,
           navigationPosition: 'right',
       		scrollHorizontally: false,
           controlArrows: false,
