--- a/nuevoBarucck/index.html
+++ b/nuevoBarucck/index.html
@@ -35,7 +35,7 @@
       <div class="table cd-section-nav ">
         <div class="inner">
           <nav>
-            <ul>
+            <ul id="menu-animate">
               <li><a href="index.html" >HOME</a></li>
               <li><a href="servicios.html">SERVICIOS</a></li>
               <li><a ef="barucck.html" class="transition">BARUCCK</a></li>
@@ -389,14 +389,9 @@
     <script type="text/javascript">
       (function($) {
         const loader = document.querySelector(".loader");
-
-       setTimeout(function() {
-         loader.style.right = "0";
-       }, 1000);
         $(window).load(function(){
           setTimeout(function() {
            loader.style.left = "100%";
-           document.body.classList.remove("loading");
            $(".loading .loading-image").addClass("dissappear");
            $(".loading .loading-text").addClass("dissappear");
            $(".slider").addClass("goes-right");
