--- a/nuevoBarucck/index.html
+++ b/nuevoBarucck/index.html
@@ -353,13 +353,12 @@
           <div class="container">
             <div class="row">
               <div class="col-xs-12 text-center">
-                <img src="img/logowhite.png" alt="Image" width="500" class="logo">
-                <h3>SOMOS <span class="cursiva">#México</span>, SOMOS <span class="cursiva">Barucck.</span></h3>
-                <ul class="redes">
-                  <li> <a href="#"><i class="fab fa-facebook-f"></i></a> </li>
-                  <li> <a href="#"><i class="fab fa-twitter"></i></a> </li>
-                  <li> <a href="#"><i class="fab fa-instagram"></i></a> </li>
-                  <li> <a href="#"><i class="fab fa-youtube"></i></a> </li>
+                <img src="img/logowhite.png" alt="Image" width="500" class="logo wow fadeIn" data-wow-delay="0.80s">
+                <ul class="redes wow fadeInUp" data-wow-delay="0.8s">
+                  <li > <a href="#"><i class="fab fa-facebook-f"></i></a> </li>
+                  <li > <a href="#"><i class="fab fa-twitter"></i></a> </li>
+                  <li > <a href="#"><i class="fab fa-instagram"></i></a> </li>
+                  <li > <a href="#"><i class="fab fa-youtube"></i></a> </li>
                 </ul>
               </div>
               <!-- end col-12 -->
@@ -426,7 +425,8 @@
           licenseKey: "OPEN-SOURCE-GPLV3-LICENSE",
       		autoScrolling:true,
           navigationPosition: 'right',
-      		scrollHorizontally: false
+      		scrollHorizontally: false,
+          scrollBar: true
       	});
 
 })(jQuery)
