--- a/nuevoBarucck/servicios.html
+++ b/nuevoBarucck/servicios.html
@@ -80,40 +80,36 @@
           </div>
       </div>
       <div id="fullpage">
-          <div class="section design" id="section1">
+          <div class="section design " id="section1">
               <div class="slide" data-anchor="slide1">
-                  <div class="container ">
+                  <div class="container wow fadeInUp" data-wow-delay="0.25s">
                     <a id="move-right"  href="experiencia.html">
                       <div class="col-md-6">
                         <div class="large">
-                           <h3 class="font-large">
+                           <h3 class="font-large hover">
                              <svg viewBox="0 0 1280 720">
-                              <text text-anchor="middle" x="50%" y="50%" style="font-size:3em;">DISEÑO</text>
+                              <text id="diseño" text-anchor="middle" x="50%" y="50%">DISEÑO.</text>
                             </svg>
                           </h3>
                         </div>
                       </div>
-                      <div class="col-md-6 top lists info-service ">
-
-
-                      <p>Inyectamos <span class="saltarin">creatividad</span> y versatilidad a la imagen de tu marca y productos. <span class="weight">Un buen diseño es el embajador exitoso de tu marca. Contamos con equipo especializado en diseño:</span></p>
-                      <div class="col-md-6">
-                        <ul>
-                        <li> <img src="img/icons/point.png" class="img-list">Corporativo</li>
-                        <li> <img src="img/icons/point.png" class="img-list">De empaque</li>
-                        <li> <img src="img/icons/point.png" class="img-list">Identidad Corporativa</li>
-                      </ul>
-                      </div>
-                      <div class="col-md-6">
-                        <ul>
-                        <li> <img src="img/icons/point.png" class="img-list">Folletería</li>
-                        <li> <img src="img/icons/point.png" class="img-list">Presentaciones ejecutivas / Brochures</li>
-                      </ul>
-                      </div>
-
-                    </div>
                     </a>
-
+                      <div class="col-md-6 top lists info-service ">
+                          <p class="wow fadeInUp" data-wow-delay="0.80s">Inyectamos creatividad y versatilidad a la imagen de tu marca y productos. <span class="weight">Un buen diseño es el embajador exitoso de tu marca. Contamos con equipo especializado en diseño:</span></p>
+                          <div class="col-md-6">
+                            <ul class="wow fadeInUp" data-wow-delay="1.2s">
+                            <li> <img src="img/icons/point.png" class="img-list">Corporativo</li>
+                            <li> <img src="img/icons/point.png" class="img-list">De empaque</li>
+                            <li> <img src="img/icons/point.png" class="img-list">Identidad Corporativa</li>
+                          </ul>
+                          </div>
+                          <div class="col-md-6">
+                            <ul class="wow fadeInUp" data-wow-delay="1.4s">
+                            <li> <img src="img/icons/point.png" class="img-list">Folletería</li>
+                            <li> <img src="img/icons/point.png" class="img-list">Presentaciones ejecutivas / Brochures</li>
+                          </ul>
+                          </div>
+                      </div>
                 </div>
 
               </div>
@@ -128,72 +124,70 @@
           <div class="section design" id="section2">
               <div class="slide" data-anchor="slide2">
                   <div class="container ">
-                    <a id="move-right"  href="experiencia-web.html">
-                  <div class="col-md-12">
-                    <div class="gif" style="text-align: center;">
-                      <img src="img/gifs/develop.gif"  class="img">
-                    </div>
-                  </div>
-                  <div class="col-md-12 top lists info-service ">
 
-                    <h3 class="font-large">WEB</h3>
-                    <p>Si quieres mejorar o incursionar en la web <span class="weight-bold">¡déjanos apoyarte!</span> Deja que tus clientes te encuentren más fácilmente en la web. Contamos con desarrolladores que crean sitios web:</p>
+
+                  <div class="col-md-7 top lists info-service ">
+                    <p class="wow fadeInUp" data-wow-delay="0.80s">Si quieres mejorar o incursionar en la web <span class="weight-bold">¡déjanos apoyarte!</span> Deja que tus clientes te encuentren más fácilmente en la web. Contamos con desarrolladores que crean sitios web:</p>
                     <div class="col-md-6">
-                      <ul>
-                      <li> <img src="img/icons/checked.png" class="img-list">Responsivos (se acoplan a cualquier dispositivo ya sea se escritorio o móvil sin deformarse) </li>
-                      <li> <img src="img/icons/checked.png" class="img-list">Fáciles de navegar (Userfriendly)</li>
-                      <li> <img src="img/icons/checked.png" class="img-list">Con un dominio adecuado</li>
+                      <ul class="wow fadeInUp" data-wow-delay="1s">
+                      <li> <img src="img/icons/point.png" class="img-list">Responsivos (se acoplan a cualquier dispositivo ya sea se escritorio o móvil sin deformarse) </li>
+                      <li> <img src="img/icons/point.png" class="img-list">Fáciles de navegar (Userfriendly)</li>
+                      <li> <img src="img/icons/point.png" class="img-list">Con un dominio adecuado</li>
                     </ul>
                     </div>
                     <div class="col-md-6">
-                      <ul>
-                      <li> <img src="img/icons/checked.png" class="img-list">Diseño contemporáneo</li>
-                      <li> <img src="img/icons/checked.png" class="img-list">Contenido de calidad</li>
+                      <ul class="wow fadeInUp" data-wow-delay="1.2s">
+                      <li> <img src="img/icons/point.png" class="img-list">Diseño contemporáneo</li>
+                      <li> <img src="img/icons/point.png" class="img-list">Contenido de calidad</li>
                     </ul>
                     </div>
 
                   </div>
+                  <a id="move-right"  href="experiencia-web.html">
+                    <div class="col-md-5">
+                      <div class="large">
+                         <h3 class="font-large hover">
+                           <svg viewBox="0 0 1280 720">
+                            <text id="diseño" text-anchor="middle" x="50%" y="50%" style="font-size: 5em;">WEB.</text>
+                          </svg>
+                        </h3>
+                      </div>
+                    </div>
                   </a>
-
                 </div>
-
               </div>
-
-
-
           </div>
            <div class="section design" id="section3">
               <div class="slide" data-anchor="slide3">
                   <div class="container ">
                     <a id="move-right"  href="#">
-                  <div class="col-md-12">
-                    <div class="gif" style="text-align: center;">
-                      <img src="img/gifs/desarrollo.gif" class="img">
-                    </div>
-                  </div>
-                  <div class="col-md-12 top lists info-service ">
-
-                    <h3 class="font-large">ECOMMERCE</h3>
-                    <p>Aumenta tus ventas de una manera eficaz y vanguardista a través de un nuevo canal digital.<br> Vender en línea es hoy ya un modelo de negocio exitoso probado, al que personas quieren incursionar, nosotros te apoyamos con:</p>
-                    <div class="col-md-6">
-                      <ul>
-                      <li> <img src="img/icons/checked.png" class="img-list">Sitio responsivo</li>
-                      <li> <img src="img/icons/checked.png" class="img-list">Carrito de compra</li>
-                      <li> <img src="img/icons/checked.png" class="img-list">Métodos de pago conectados a tu tienda</li>
-                    </ul>
-                    </div>
-                    <div class="col-md-6">
-                      <ul>
-                      <li> <img src="img/icons/checked.png" class="img-list">Capacitación para que puedas administrar tu tienda</li>
-                      <li> <img src="img/icons/checked.png" class="img-list">Moderno</li>
-                    </ul>
-                    </div>
-
-                  </div>
-                  </a>
-
+                      <div class="col-md-6">
+                        <div class="large">
+                           <h3 class="font-large hover">
+                             <svg viewBox="0 0 1310 720">
+                              <text id="diseño" text-anchor="middle" x="50%" y="50%" style="font-size: 3.5em;">eCommerce.</text>
+                            </svg>
+                          </h3>
+                        </div>
+                      </div>
+                    </a>
+                      <div class="col-md-6 top lists info-service ">
+                        <p class="wow fadeInUp" data-wow-delay="0.80s">Aumenta tus ventas de una manera eficaz y vanguardista a través de un nuevo canal digital.<br> Vender en línea es hoy ya un modelo de negocio exitoso probado, al que personas quieren incursionar, nosotros te apoyamos con:</p>
+                        <div class="col-md-6">
+                          <ul class="wow fadeInUp" data-wow-delay="1s">
+                          <li> <img src="img/icons/point.png" class="img-list">Sitio responsivo</li>
+                          <li> <img src="img/icons/point.png" class="img-list">Carrito de compra</li>
+                          <li> <img src="img/icons/point.png" class="img-list">Métodos de pago conectados a tu tienda</li>
+                        </ul>
+                        </div>
+                        <div class="col-md-6">
+                          <ul class="wow fadeInUp" data-wow-delay="1.2s">
+                          <li> <img src="img/icons/point.png" class="img-list">Capacitación para que puedas administrar tu tienda</li>
+                          <li> <img src="img/icons/point.png" class="img-list">Moderno</li>
+                        </ul>
+                        </div>
+                      </div>
                 </div>
-
               </div>
 
 
@@ -203,13 +197,12 @@
             <div class="container">
               <div class="row">
                 <div class="col-xs-12 text-center">
-                  <img src="img/logowhite.png" alt="Image" width="500" class="logo">
-                  <h3>SOMOS <span class="cursiva">#México</span>, SOMOS <span class="cursiva">Barucck.</span></h3>
-                  <ul class="redes">
-                    <li> <a href="#"><i class="fab fa-facebook-f"></i></a> </li>
-                    <li> <a href="#"><i class="fab fa-twitter"></i></a> </li>
-                    <li> <a href="#"><i class="fab fa-instagram"></i></a> </li>
-                    <li> <a href="#"><i class="fab fa-youtube"></i></a> </li>
+                  <img src="img/logowhite.png" alt="Image" width="500" class="logo wow fadeIn" data-wow-delay="0.80s">
+                  <ul class="redes wow fadeInUp" data-wow-delay="0.8s">
+                    <li > <a href="#"><i class="fab fa-facebook-f"></i></a> </li>
+                    <li > <a href="#"><i class="fab fa-twitter"></i></a> </li>
+                    <li > <a href="#"><i class="fab fa-instagram"></i></a> </li>
+                    <li > <a href="#"><i class="fab fa-youtube"></i></a> </li>
                   </ul>
                 </div>
                 <!-- end col-12 -->
@@ -238,6 +231,7 @@
 
     <script src="js/jquery.min.js"></script>
     <script type="text/javascript">
+
       (function($) {
         const loader = document.querySelector(".loader");
 
@@ -253,7 +247,7 @@
            $(".slider").addClass("goes-right");
            $(".navbar-default").addClass("show");
            $('.loading').delay(1000).addClass("fade-out");
-
+           $("#diseño").attr("class","show-diseño");
          }, 2500);
         });
       })(jQuery)
@@ -278,7 +272,6 @@
     (function($) {
       	$('#fullpage').fullpage({
           // anchors: ['page1', 'page2', 'page3'],
-           scrollOverflow: true,
           sectionsColor: ['#fff', '#fff', '#fff','#000'],
           licenseKey: "OPEN-SOURCE-GPLV3-LICENSE",
       		autoScrolling:true,
@@ -286,7 +279,8 @@
           navigationPosition: 'right',
       		scrollHorizontally: false,
           controlArrows: false,
-          scrollingSpeed: 1100,
+          scrollingSpeed: 900,
+          scrollBar: true
           //easingcss3: 'cubic-bezier(0.175, 0.885, 0.320, 1.275)'
       	});
 
