--- a/nuevoBarucck/wave.html
+++ b/nuevoBarucck/wave.html
@@ -33,7 +33,18 @@
 <link href="ico/favicon.png" rel="shortcut icon">
 
 <!-- CSS FILES -->
-<link href="css/main.css" rel="stylesheet">
+<link rel="stylesheet" href="css/normalize.css">
+<link rel="stylesheet" href="css/animate.css">
+<link rel="stylesheet" href="css/bootstrap.css">
+<link rel="stylesheet" href="css/bootstrap.min.css">
+<link rel="stylesheet" href="css/fpslineicons.css">
+<link rel="stylesheet" href="css/config.css">
+<link rel="stylesheet" href="css/swipebox.css">
+<link rel="stylesheet" href="css/text-rotater.css">
+<link rel="stylesheet" href="css/fullpage.min.css">
+<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/estilosfullpage.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" >
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
