--- a/nuevoBarucck/experiencia.html
+++ b/nuevoBarucck/experiencia.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/config.css">
     <link rel="stylesheet" href="css/swipebox.css">
     <link rel="stylesheet" href="css/text-rotater.css">
+    <link rel="stylesheet" href="css/style-experience.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" >
 
@@ -26,114 +27,154 @@
        <h2 class="loading-text cd-headline clip is-full-width"> <span class="cd-words-wrapper"> <b class="is-visible">¡Esto es creatividad!</b> <b>BARUCCK</b></span> </h2>
         <div class="loading-image"><i class="fas fa-circle-notch fa-spin fa-4x"></i></div>
       </div>
-      <!-- end loader -->
     </div>
-   <div class="navigation" role="navigation" >
-      <!--<div class="video-bg hidden-sm hidden-xs">
-        <video src="videos/video.mp4" muted autoplay loop></video>
-      </div>-->
-      <!-- end video-bg -->
+    <!-- end loader -->
+  <div class="navigation" role="navigation" >
+    <!--<div class="video-bg hidden-sm hidden-xs">
+      <video src="videos/video.mp4" muted autoplay loop></video>
+    </div>-->
+    <!-- end video-bg -->
 
-      <div class="table cd-section-nav">
-        <div class="inner">
-          <nav>
-            <ul>
-              <li><a href="index.html" >HOME</a></li>
-              <li><a ef="servicios.html">SERVICIOS</a></li>
-              <li><a ef="barucck.html" class="transition">BARUCCK</a></li>
+    <div class="table cd-section-nav ">
+      <div class="inner">
+        <nav>
+          <ul>
+            <li><a href="index.html" >HOME</a></li>
+            <li><a href="servicios.html">SERVICIOS</a></li>
+            <li><a ef="barucck.html" class="transition">BARUCCK</a></li>
+            <li><a ef="pyme.html" class="transition">TU GRAN PYME</a></li>
+            <li><a ef="blog.html" class="transition">BLOG</a></li>
+            <li><a ef="contacto.html" class="transition">CONTACTO</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </div>
+  <!--ON MOVIL-->
+    <nav class="navbar navbar-default  ">
+        <div class="row">
+          <div class="col-xs-12">
+            <a href="#"><img class="logo" src="img/logo1.png"></a>
+            <div class="hamburger-menu ">MENÚ
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
+
+            </div>
+          <!--  <ul  class="hide">
+              <li><a href="index.html">HOME</a></li>
+              <li><a href="servicios.html">SERVICIOS</a></li>
+              <li><a href="barucck.html" class="transition">BARUCCK</a></li>
               <li><a ef="pyme.html" class="transition">TU GRAN PYME</a></li>
               <li><a ef="blog.html" class="transition">BLOG</a></li>
               <li><a ef="contacto.html" class="transition">CONTACTO</a></li>
-            </ul>
-          </nav>
+            </ul>-->
+          </div>
+        </div>
+    </nav>
+    <div id="scroll-wrapper-inner">
+          <div id="scroll-title">
+            Scroll
+          </div>
+          <div id="scroll-down">
+        </div>
+    </div>
+    <div class="main">
+    <div class="sidebar-hover">
+      <p class="pagination">
+        <span class="page">01</span> / <span class="total-pages">08</span>
+      </p>
+    </div>
+    <div class="sidebar-real">
+      <div data-page="1" class="nav-elem nav-1 active"></div>
+      <div data-page="2" class="nav-elem nav-2"></div>
+      <div data-page="3" class="nav-elem nav-3"></div>
+      <div data-page="4" class="nav-elem nav-4"></div>
+      <div data-page="5" class="nav-elem nav-5"></div>
+      <div data-page="6" class="nav-elem nav-6"></div>
+      <div data-page="7" class="nav-elem nav-7"></div>
+      <div data-page="8" class="nav-elem nav-8"></div>
+    </div>
+    <div class="sections">
+      <div class="section section-1">
+        <div class="left-part"></div>
+        <div class="content">
+          <div class="bg-part"></div>
+          <div class="bg-part"></div>
+          <div class="bg-part"></div>
+          <div class="bg-part"></div>
+          <div class="bg-part"></div>
+          <div class="bg-part"></div>
+          <div class="bg-part"></div>
+          <div class="bg-part"></div>
+          <h2 class="section-heading">Diseño1</h2>
+          <p class="additional-text">Alguna descripcion</p>
+        </div>
+      </div>
+      <div class="section section-2">
+        <div class="left-part"></div>
+        <div class="content">
+          <div class="bg-part"></div>
+          <div class="bg-part"></div>
+          <div class="bg-part"></div>
+          <div class="bg-part"></div>
+          <div class="bg-part"></div>
+          <div class="bg-part"></div>
+          <div class="bg-part"></div>
+          <div class="bg-part"></div>
+          <h2 class="section-heading">Diseño2</h2>
+          <p class="additional-text">Otra descripcion</p>
+        </div>
+      </div>
+      <div class="section section-3">
+        <div class="left-part"></div>
+        <div class="content">
+          <div class="bg-part"></div>
+          <div class="bg-part"></div>
+          <div class="bg-part"></div>
+          <div class="bg-part"></div>
+          <div class="bg-part"></div>
+          <div class="bg-part"></div>
+          <div class="bg-part"></div>
+          <div class="bg-part"></div>
+          <h2 class="section-heading">Diseño3</h2>
+          <p class="additional-text">Alguna otra descripcion</p>
         </div>
       </div>
     </div>
-    <!--ON MOVIL-->
-      <nav class="navbar navbar-default  ">
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-12">
-              <a href="#"><img class="logo" src="img/logo1.png"></a>
-              <div class="hamburger-menu hide">
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
-              </div>
-              <ul id="ocultar-menu-desktop" class="">
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="servicios.html">SERVICIOS</a></li>
-                <li><a href="barucck.html" class="transition">BARUCCK</a></li>
-                <li><a ef="pyme.html" class="transition">TU GRAN PYME</a></li>
-                <li><a ef="blog.html" class="transition">BLOG</a></li>
-                <li><a ef="contacto.html" class="transition">CONTACTO</a></li>
+  </div>
+  <!--  <footer class="section fp-auto-height">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12 text-center">
+            <img src="img/logowhite.png" alt="Image" width="500" class="logo wow fadeIn" data-wow-delay="0.80s">
+            <ul class="redes wow fadeInUp" data-wow-delay="0.8s">
+              <li > <a href="#"><i class="fab fa-facebook-f"></i></a> </li>
+              <li > <a href="#"><i class="fab fa-twitter"></i></a> </li>
+              <li > <a href="#"><i class="fab fa-instagram"></i></a> </li>
+              <li > <a href="#"><i class="fab fa-youtube"></i></a> </li>
+            </ul>
+          </div>
+          end col-12 -->
+          <div class="col-xs-12">
+            <div class="sub-footer"> <span class="copyright">© 2018 Barucck | Agencia de publicidad</span>
+              <ul>
+                <li> <a href="index.html">Home</a></li>
+                <li> <a href="career.html">Barucck</a></li>
+                <li> <a href="#" target="_blank">Experiencia</a></li>
+                <li> <a href="#" target="_blank">BLog</a></li>
+                <li> <a href="#" target="_blank">Contacto</a></li>
               </ul>
             </div>
+            <!-- end sub-footer -->
           </div>
+          <!-- end col-12 -->
         </div>
-      </nav>
-     <!-- <div class="space"></div> -->
-      <div>
-          <section class="cd-section visible">
-              <div>
-                <div class="container center">
-                  <div class="col-md-6">
-                    <h2>Diseño</h2>
-                  </div>
-                  <div class="col-md-6 center">
-                    <img src="img/exp/diseño1.png" style="width: 100%;">
-                  </div>
-                </div>
-              </div>
-            </section>
-
-            <section class="cd-section">
-               <div>
-                <div class="container center">
-                  <div class="col-md-6">
-                    <h2>Diseño</h2>
-                  </div>
-                  <div class="col-md-6 center">
-                    <img src="img/exp/diseño1.png" style="width: 100%;">
-                  </div>
-                </div>
-              </div>
-            </section>
-            <section class="cd-section">
-               <div>
-                <div class="container center">
-                  <div class="col-md-6">
-                    <h2>Diseño</h2>
-                  </div>
-                  <div class="col-md-6 center">
-                    <img src="img/exp/diseño1.png" style="width: 100%;">
-                  </div>
-                </div>
-              </div>
-            </section>
-            <section class="cd-section">
-               <div>
-                <div class="container center">
-                  <div class="col-md-6">
-                    <h2>Diseño</h2>
-                  </div>
-                  <div class="col-md-6 center">
-                    <img src="img/exp/diseño1.png" style="width: 100%;">
-                  </div>
-                </div>
-              </div>
-            </section>
-
-
-
-            <!-- <section class="cd-section">
-              <div>
-                <h2>Section 5</h2>
-              </div>
-          </section> -->
-
+        <!-- end row -->
       </div>
+      <!-- end container -->
+    </footer>
 
 
 
