--- a/nuevoBarucck/index.html
+++ b/nuevoBarucck/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Barucck | Agencia de publicidad</title>
-    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -228,127 +227,6 @@
         <!-- end slider-inner -->
       </section>
 
-        <!--<section class="showcase">
-          <div class="header">
-            <div class="container">
-              <div class="row">
-                <div class="col-xs-12">
-                  <h2 class="wow fadeInUp" data-wow-delay="0.5s">Rétanos</h2>
-                  <h5 class="wow fadeInUp" data-wow-delay="0.10s">Lo que hacemos</h5>
-
-                </div>
-
-              </div>
-
-            </div>
-
-          </div>
-
-          <div class="portfolio">
-            <div class="container">
-              <div class="row">
-                <div class="col-xs-12">
-                  <ul class="portfolio-masonry">
-                    <li class="wow fadeInUp" data-wow-delay="0.05s">
-                      <figure><img src="img/clientes/taza.jpg" alt="Image">
-                       <a href="img/clientes/taza.jpg" data-rel="gallery" class="swipebox" title="GRADOZERO">
-                       <figcaption class="bg-color4">
-                          <div class="table">
-                            <div class="inner"> <span>M</span> BRANDING </div>
-                          </div>
-                        </figcaption>
-                        </a>
-                      </figure>
-                    </li>
-                    <li class="double wow fadeInUp" data-wow-delay="0.10s">
-                      <figure><img src="img/clientes/taza.jpg" alt="Image">
-                       <a href="img/clientes/taza.jpg" data-rel="gallery" class="swipebox" title="VEGA CAM">
-                        <figcaption class="bg-color3">
-                          <div class="table">
-                            <div class="inner"> <span>M</span> BTL</div>
-                          </div>
-                        </figcaption>
-                        </a>
-                      </figure>
-                    </li>
-                    <li class="double wow fadeInUp" data-wow-delay="0.15s">
-                      <figure> <img src="img/clientes/taza.jpg" alt="Image">
-                        <a href="img/clientes/taza.jpg" data-rel="gallery" class="swipebox" title="MOCK-UP">
-                        <figcaption class="bg-color2">
-                          <div class="table">
-                            <div class="inner"> <span>M</span> BRANDING</div>
-                          </div>
-                        </figcaption>
-                        </a>
-                      </figure>
-                    </li>
-                    <li class="double wow fadeInUp" data-wow-delay="0.05s">
-                      <figure> <img src="img/clientes/taza.jpg" alt="Image">
-                       <a href="img/clientes/taza.jpg" data-rel="gallery" class="swipebox" title="MAGAZINE">
-                        <figcaption class="bg-color1">
-                          <div class="table">
-                            <div class="inner"> <span>M</span> BRANDING</div>
-                          </div>
-                        </figcaption>
-                        </a>
-                      </figure>
-                    </li>
-                    <li class="double wow fadeInUp" data-wow-delay="0.10s">
-                      <figure> <img src="img/clientes/taza.jpg" alt="Image">
-                        <a href="img/clientes/taza.jpg" data-rel="gallery" class="swipebox" title="MESTERSTYKE">
-                        <figcaption class="bg-color2">
-                          <div class="table">
-                            <div class="inner"> <span>M</span> WEB</div>
-                          </div>
-                        </figcaption>
-                        </a>
-                      </figure>
-                    </li>
-                    <li class="wow fadeInUp" data-wow-delay="0.15s">
-                      <figure> <img src="img/clientes/taza.jpg" alt="Image">
-                        <a href="img/clientes/taza.jpg" data-rel="gallery" class="swipebox" title="DARK LIGHT">
-                        <figcaption class="bg-color3">
-                          <div class="table">
-                            <div class="inner"> <span>M</span> BRANDING</div>
-                          </div>
-                        </figcaption>
-                        </a>
-                      </figure>
-                    </li>
-                  </ul>
-                </div>
-
-              </div>
-
-            </div>
-
-          </div>
-
-        </section>-->
-        <!-- end showcase -->
-        <!--<section class="web-tecnologias">
-          <div class="container">
-            <div class="row">
-              <h2>Desarrollo web</h2>
-              <ul>
-                <li><img src="img/icons/html.png"/></li>
-                <li><img src="img/icons/css.png"/></li>
-                <li><img src="img/icons/js.png"/></li>
-                <li><img src="img/icons/wp.png"/></li>
-              </ul>
-            </div>
-          </div>
-        </section>-->
-        <!--<section class="servicios" style="height: 2000px">
-          <div class="container">
-            <div class="row">
-
-
-            </div>
-
-          </div>
-
-        </section>-->
         <footer class="section fp-auto-height">
           <div class="container">
             <div class="row">
@@ -380,7 +258,7 @@
           </div>
           <!-- end container -->
         </footer>
-</div>
+     </div>
 
 
 
@@ -406,7 +284,6 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/waypoints.min.js"></script>
     <script src="js/jquery.counterup.min.js"></script>
-    <script src="js/jquery.textrotater.js"></script>
     <script src="js/jquery.stellar.js"></script>
     <script src="js/jquery.vopacity.js"></script>
     <script src="js/wow.js"></script>
@@ -426,7 +303,7 @@
       		autoScrolling:true,
           navigationPosition: 'right',
       		scrollHorizontally: false,
-          scrollBar: true
+          scrollBar: false
       	});
 
 })(jQuery)
