--- a/nuevoBarucck/servicios.html
+++ b/nuevoBarucck/servicios.html
@@ -19,7 +19,7 @@
 
 
   </head>
-  <body>
+  <body class="servicios">
 
     <div class="loading">
       <div class="loader">
@@ -40,7 +40,7 @@
           <ul>
             <li><a href="index.html" >HOME</a></li>
             <li><a href="servicios.html">SERVICIOS</a></li>
-            <li><a ef="barucck.html" class="transition">BARUCCK</a></li>
+            <li><a href="barucck.html" class="transition">BARUCCK</a></li>
             <li><a ef="pyme.html" class="transition">TU GRAN PYME</a></li>
             <li><a ef="blog.html" class="transition">BLOG</a></li>
             <li><a ef="contacto.html" class="transition">CONTACTO</a></li>
@@ -83,115 +83,147 @@
           <div class="section design " id="section1">
               <div class="slide" data-anchor="slide1">
                   <div class="container wow fadeInUp" data-wow-delay="0.25s">
-                    <a id="move-right"  href="experiencia.html">
                       <div class="col-md-6">
                         <div class="large">
                            <h3 class="font-large hover">
-                             <svg viewBox="0 0 1280 720">
-                              <text id="diseño" text-anchor="middle" x="50%" y="50%">DISEÑO.</text>
+                             <svg xmlns="http://www.w3.org" viewBox="0 0 1280 720">
+                              <text id="diseño" text-anchor="middle" x="50%" y="50%" style="font-size: 3.5em;">DISEÑO.</text>
                             </svg>
                           </h3>
                         </div>
                       </div>
-                    </a>
                       <div class="col-md-6 top lists info-service ">
-                          <p class="wow fadeInUp" data-wow-delay="0.80s">Inyectamos creatividad y versatilidad a la imagen de tu marca y productos. <span class="weight">Un buen diseño es el embajador exitoso de tu marca. Contamos con equipo especializado en diseño:</span></p>
+                          <p class="wow fadeInUp" data-wow-delay="0.80s">Inyectamos creatividad y versatilidad a la imagen de tu marca y productos. Un buen diseño es el embajador exitoso de tu marca. Contamos con equipo especializado en diseño:</p>
                           <div class="col-md-6">
                             <ul class="wow fadeInUp" data-wow-delay="1.2s">
-                            <li> <img src="img/icons/point.png" class="img-list">Corporativo</li>
-                            <li> <img src="img/icons/point.png" class="img-list">De empaque</li>
-                            <li> <img src="img/icons/point.png" class="img-list">Identidad Corporativa</li>
+                            <li> <img src="img/icons/point.png" class="img-list">Corporativo.</li>
+                            <li> <img src="img/icons/point.png" class="img-list">De empaque.</li>
+                            <li> <img src="img/icons/point.png" class="img-list">Identidad Corporativa.</li>
                           </ul>
                           </div>
                           <div class="col-md-6">
                             <ul class="wow fadeInUp" data-wow-delay="1.4s">
-                            <li> <img src="img/icons/point.png" class="img-list">Folletería</li>
-                            <li> <img src="img/icons/point.png" class="img-list">Presentaciones ejecutivas / Brochures</li>
+                            <li> <img src="img/icons/point.png" class="img-list">Folletería.</li>
+                            <li> <img src="img/icons/point.png" class="img-list">Presentaciones ejecutivas / Brochures.</li>
                           </ul>
                           </div>
                       </div>
                 </div>
-
+                <div class="container top">
+                  <div class="col-xs-12 wow fadeInUp" data-wow-delay="1.8s">
+                    <span class="ver"><a href="diseño.html">Click me!</a></span>
+                  </div>
+                </div>
               </div>
-             <div class="slide" data-anchor="slide2" >
-              <section class="container">
-
-                 </section>
-              </div>
-
-
+          
           </div>
           <div class="section design" id="section2">
               <div class="slide" data-anchor="slide2">
                   <div class="container ">
-
-
-                  <div class="col-md-7 top lists info-service ">
-                    <p class="wow fadeInUp" data-wow-delay="0.80s">Si quieres mejorar o incursionar en la web <span class="weight-bold">¡déjanos apoyarte!</span> Deja que tus clientes te encuentren más fácilmente en la web. Contamos con desarrolladores que crean sitios web:</p>
-                    <div class="col-md-6">
-                      <ul class="wow fadeInUp" data-wow-delay="1s">
-                      <li> <img src="img/icons/point.png" class="img-list">Responsivos (se acoplan a cualquier dispositivo ya sea se escritorio o móvil sin deformarse) </li>
-                      <li> <img src="img/icons/point.png" class="img-list">Fáciles de navegar (Userfriendly)</li>
-                      <li> <img src="img/icons/point.png" class="img-list">Con un dominio adecuado</li>
-                    </ul>
-                    </div>
-                    <div class="col-md-6">
-                      <ul class="wow fadeInUp" data-wow-delay="1.2s">
-                      <li> <img src="img/icons/point.png" class="img-list">Diseño contemporáneo</li>
-                      <li> <img src="img/icons/point.png" class="img-list">Contenido de calidad</li>
-                    </ul>
-                    </div>
-
-                  </div>
-                  <a id="move-right"  href="experiencia-web.html">
-                    <div class="col-md-5">
+                   <div class="col-md-5">
                       <div class="large">
                          <h3 class="font-large hover">
-                           <svg viewBox="0 0 1280 720">
-                            <text id="diseño" text-anchor="middle" x="50%" y="50%" style="font-size: 5em;">WEB.</text>
+                           <svg xmlns="http://www.w3.org" viewBox="0 0 1280 720">
+                            <text id="diseño" text-anchor="middle" x="50%" y="50%" style="font-size: 4em;">WEB.</text>
                           </svg>
                         </h3>
                       </div>
                     </div>
-                  </a>
+                  <div class="col-md-7 top lists info-service ">
+                    <p class="wow fadeInUp" data-wow-delay="0.80s">Si quieres mejorar o incursionar en la web <span class="weight-bold">¡déjanos apoyarte!</span> Deja que tus clientes te encuentren más fácilmente en la web. Contamos con desarrolladores que crean sitios web:</p>
+                    <div class="col-md-6">
+                      <ul class="wow fadeInUp" data-wow-delay="1s">
+                      <li> <img src="img/icons/point.png" class="img-list">Responsivos.</li>
+                      <li> <img src="img/icons/point.png" class="img-list">Fáciles de navegar.</li>
+                      <li> <img src="img/icons/point.png" class="img-list">Con un dominio adecuado.</li>
+                    </ul>
+                    </div>
+                    <div class="col-md-6">
+                      <ul class="wow fadeInUp" data-wow-delay="1.2s">
+                      <li> <img src="img/icons/point.png" class="img-list">Diseño contemporáneo.</li>
+                      <li> <img src="img/icons/point.png" class="img-list">Contenido de calidad.</li>
+                    </ul>
+                    </div>
+                  </div>
+                </div>
+                <div class="container top">
+                  <div class="col-xs-12 wow fadeInUp" data-wow-delay="1.8s">
+                    <span class="ver"><a href="web.html">Click me!</a></span>
+                  </div>
                 </div>
               </div>
           </div>
            <div class="section design" id="section3">
               <div class="slide" data-anchor="slide3">
                   <div class="container ">
-                    <a id="move-right"  href="#">
+                    <div class="col-md-6">
+                      <div class="large">
+                         <h3 class="font-large hover">
+                           <svg xmlns="http://www.w3.org" viewBox="0 0 1310 720">
+                            <text id="diseño" text-anchor="middle" x="50%" y="50%" style="font-size: 3.1em;">eCommerce.</text>
+                          </svg>
+                        </h3>
+                      </div>
+                    </div>
+                  <div class="col-md-6 top lists info-service ">
+                    <p class="wow fadeInUp" data-wow-delay="0.80s">Aumenta tus ventas de una manera eficaz y vanguardista a través de un nuevo canal digital. Vender en línea es hoy ya un modelo de negocio exitoso probado, al que personas quieren incursionar, nosotros te apoyamos con:</p>
                       <div class="col-md-6">
-                        <div class="large">
-                           <h3 class="font-large hover">
-                             <svg viewBox="0 0 1310 720">
-                              <text id="diseño" text-anchor="middle" x="50%" y="50%" style="font-size: 3.5em;">eCommerce.</text>
-                            </svg>
-                          </h3>
-                        </div>
-                      </div>
-                    </a>
-                      <div class="col-md-6 top lists info-service ">
-                        <p class="wow fadeInUp" data-wow-delay="0.80s">Aumenta tus ventas de una manera eficaz y vanguardista a través de un nuevo canal digital.<br> Vender en línea es hoy ya un modelo de negocio exitoso probado, al que personas quieren incursionar, nosotros te apoyamos con:</p>
-                        <div class="col-md-6">
-                          <ul class="wow fadeInUp" data-wow-delay="1s">
-                          <li> <img src="img/icons/point.png" class="img-list">Sitio responsivo</li>
-                          <li> <img src="img/icons/point.png" class="img-list">Carrito de compra</li>
-                          <li> <img src="img/icons/point.png" class="img-list">Métodos de pago conectados a tu tienda</li>
+                        <ul class="wow fadeInUp" data-wow-delay="1s">
+                          <li> <img src="img/icons/point.png" class="img-list">Sitio responsivo.</li>
+                          <li> <img src="img/icons/point.png" class="img-list">Carrito de compra.</li>
+                          <li> <img src="img/icons/point.png" class="img-list">Métodos de pago conectados a tu tienda.</li>
                         </ul>
-                        </div>
-                        <div class="col-md-6">
-                          <ul class="wow fadeInUp" data-wow-delay="1.2s">
-                          <li> <img src="img/icons/point.png" class="img-list">Capacitación para que puedas administrar tu tienda</li>
-                          <li> <img src="img/icons/point.png" class="img-list">Moderno</li>
-                        </ul>
-                        </div>
                       </div>
+                      <div class="col-md-6">
+                        <ul class="wow fadeInUp" data-wow-delay="1.2s">
+                          <li> <img src="img/icons/point.png" class="img-list">Capacitación para que puedas administrar tu tienda.</li>
+                          <li> <img src="img/icons/point.png" class="img-list">Moderno.</li>
+                        </ul>
+                      </div>
+                  </div>
+                </div>
+                <div class="container top">
+                  <div class="col-xs-12 wow fadeInUp" data-wow-delay="1.8s">
+                    <span class="ver"><a href="diseño.html">Click me!</a></span>
+                  </div>
                 </div>
               </div>
-
-
-
+          </div>
+          <div class="section design" id="section3">
+              <div class="slide" data-anchor="slide3">
+                  <div class="container ">
+                    <div class="col-md-6">
+                      <div class="large">
+                         <h3 class="font-large hover">
+                           <svg xmlns="http://www.w3.org" viewBox="0 0 1310 720">
+                            <text id="diseño" text-anchor="middle" x="50%" y="50%" style="font-size: 3.1em;">Social.</text>
+                          </svg>
+                        </h3>
+                      </div>
+                    </div>
+                  <div class="col-md-6 top lists info-service ">
+                    <p class="wow fadeInUp" data-wow-delay="0.80s">Aumenta tus ventas de una manera eficaz y vanguardista a través de un nuevo canal digital. Vender en línea es hoy ya un modelo de negocio exitoso probado, al que personas quieren incursionar, nosotros te apoyamos con:</p>
+                      <div class="col-md-6">
+                        <ul class="wow fadeInUp" data-wow-delay="1s">
+                          <li> <img src="img/icons/point.png" class="img-list">Sitio responsivo.</li>
+                          <li> <img src="img/icons/point.png" class="img-list">Carrito de compra.</li>
+                          <li> <img src="img/icons/point.png" class="img-list">Métodos de pago conectados a tu tienda.</li>
+                        </ul>
+                      </div>
+                      <div class="col-md-6">
+                        <ul class="wow fadeInUp" data-wow-delay="1.2s">
+                          <li> <img src="img/icons/point.png" class="img-list">Capacitación para que puedas administrar tu tienda.</li>
+                          <li> <img src="img/icons/point.png" class="img-list">Moderno.</li>
+                        </ul>
+                      </div>
+                  </div>
+                </div>
+                <div class="container top">
+                  <div class="col-xs-12 wow fadeInUp" data-wow-delay="1.8s">
+                    <span class="ver"><a href="diseño.html">Click me!</a></span>
+                  </div>
+                </div>
+              </div>
           </div>
           <footer class="section fp-auto-height">
             <div class="container">
@@ -272,7 +304,7 @@
     (function($) {
       	$('#fullpage').fullpage({
           // anchors: ['page1', 'page2', 'page3'],
-          sectionsColor: ['#fff', '#fff', '#fff','#000'],
+          sectionsColor: ['#fff', '#fff', '#fff','#fff'],
           licenseKey: "OPEN-SOURCE-GPLV3-LICENSE",
       		autoScrolling:true,
           navigation:false,
