--- a/nuevoBarucck/web.html
+++ b/nuevoBarucck/web.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Barucck | Agencia de publicidad</title>
-    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -12,15 +11,15 @@
     <link rel="stylesheet" href="css/config.css">
     <link rel="stylesheet" href="css/swipebox.css">
     <link rel="stylesheet" href="css/text-rotater.css">
+    <link rel="stylesheet" href="css/fullpage.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/web.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" >
 
-    <link rel="stylesheet" href="css/style-scroll.css"> <!-- Resource style -->
-    <script src="js/modernizr.js"></script> <!-- Modernizr -->
 
   </head>
-  <!-- hijacking: on/off - animation: none/scaleDown/rotate/gallery/catch/opacity/fixed/parallax -->
-  <body data-hijacking="on" data-animation="opacity">
+  <body>
+
     <div class="loading">
       <div class="loader">
        <h2 class="loading-text cd-headline clip is-full-width"> <span class="cd-words-wrapper"> <b class="is-visible">¡Esto es creatividad!</b> <b>BARUCCK</b></span> </h2>
@@ -72,52 +71,61 @@
           </div>
         </div>
     </nav>
-    <div id="scroll-wrapper-inner">
-          <div id="scroll-title">
-            Scroll
-          </div>
-          <div id="scroll-down">
-        </div>
-    </div>
-  
-  <!--  <footer class="section fp-auto-height">
-      <div class="container">
-        <div class="row">
-          <div class="col-xs-12 text-center">
-            <img src="img/logowhite.png" alt="Image" width="500" class="logo wow fadeIn" data-wow-delay="0.80s">
-            <ul class="redes wow fadeInUp" data-wow-delay="0.8s">
-              <li > <a href="#"><i class="fab fa-facebook-f"></i></a> </li>
-              <li > <a href="#"><i class="fab fa-twitter"></i></a> </li>
-              <li > <a href="#"><i class="fab fa-instagram"></i></a> </li>
-              <li > <a href="#"><i class="fab fa-youtube"></i></a> </li>
-            </ul>
-          </div>
-          end col-12 -->
-          <div class="col-xs-12">
-            <div class="sub-footer"> <span class="copyright">© 2018 Barucck | Agencia de publicidad</span>
-              <ul>
-                <li> <a href="index.html">Home</a></li>
-                <li> <a href="career.html">Barucck</a></li>
-                <li> <a href="#" target="_blank">Experiencia</a></li>
-                <li> <a href="#" target="_blank">BLog</a></li>
-                <li> <a href="#" target="_blank">Contacto</a></li>
-              </ul>
+      <div id="scroll-wrapper-inner">
+            <div id="scroll-title">
+              Scroll
             </div>
-            <!-- end sub-footer -->
+            <div id="scroll-down">
           </div>
-          <!-- end col-12 -->
-        </div>
-        <!-- end row -->
       </div>
-      <!-- end container -->
-    </footer>
+       <div class="regresar">
+       </div>
+       
+         <section class="cd-fixed-background img-1 wow fadeInUp" data-wow-delay="1.2s" data-type="slider-item">
+          <div class="background">
+            <div class="cd-content" >
+              <h2 class="title-diseño wow fadeInUp" data-wow-delay="1.8s">CUOREDERMATOLOGY.</h2>
+              <p class="wow fadeInUp" data-wow-delay="0.80s">WEB</p>
+          </div>
+          </section>
 
+          <section class="cd-fixed-background img-2" data-type="slider-item">
+            <div class="background">
+            <div class="cd-content" >
+              <h2 class="title-diseño wow fadeInUp" data-wow-delay="1s">AJPARKING.</h2>
+             <p class="wow fadeInUp" data-wow-delay="0.80s">WEB</p>
+          </div>
+          </section>
 
+          <section class="cd-fixed-background img-3" data-type="slider-item">
+            <div class="background">
+            <div class="cd-content" >
+              <h2 class="title-diseño wow fadeInUp" data-wow-delay="1s">GRUPO MIDA.</h2>
+             <p class="wow fadeInUp" data-wow-delay="0.80s">WEB</p>
+          </div>
+          </section>
 
+          <section class="cd-fixed-background img-4" data-type="slider-item">
+            <div class="background">
+            <div class="cd-content" >
+              <h2 class="title-diseño wow fadeInUp" data-wow-delay="1s">INEXPLICABLE.</h2>
+             <p class="wow fadeInUp" data-wow-delay="0.80s">WEB</p>
+          </div>
+          </section>
+
+          <section class="cd-fixed-background img-5" data-type="slider-item">
+            <div class="background">
+            <div class="cd-content" >
+              <h2 class="title-diseño wow fadeInUp" data-wow-delay="1s">MI GRANJITA.</h2>
+             <p class="wow fadeInUp" data-wow-delay="0.80s">WEB</p>
+          </div>
+          </section>
+      
 
 
     <script src="js/jquery.min.js"></script>
     <script type="text/javascript">
+
       (function($) {
         const loader = document.querySelector(".loader");
 
@@ -133,13 +141,13 @@
            $(".slider").addClass("goes-right");
            $(".navbar-default").addClass("show");
            $('.loading').delay(1000).addClass("fade-out");
-
+           $("#diseño").attr("class","show-diseño");
+           $("section.cd-fixed-background").css({"display":"block"});
          }, 2500);
         });
       })(jQuery)
     </script>
 
-    </script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/waypoints.min.js"></script>
     <script src="js/jquery.counterup.min.js"></script>
@@ -153,9 +161,7 @@
     <script src="js/jquery.themepunch.revolution.min.js" type="text/javascript"></script>
     <script src="js/config.js" type="text/javascript"></script>
     <script src="js/scripts.js" type="text/javascript"></script>
-    <script src="js/velocity.min.js"></script>
-    <script src="js/velocity.ui.min.js"></script>
-    <script src="js/main.js"></script> <!-- Resource jQuery -->
-
+    <script type="text/javascript" src="js/scrolloverflow.js"></script>
+    <script src="js/main-web.js"></script> <!-- Resource jQuery -->
   </body>
 </html>
