--- a/nuevoBarucck/diseño.html
+++ b/nuevoBarucck/diseño.html
@@ -39,10 +39,10 @@
           <ul>
             <li><a href="index.html" >HOME</a></li>
             <li><a href="servicios.html">SERVICIOS</a></li>
-            <li><a ef="barucck.html" class="transition">BARUCCK</a></li>
-            <li><a ef="pyme.html" class="transition">TU GRAN PYME</a></li>
-            <li><a ef="blog.html" class="transition">BLOG</a></li>
-            <li><a ef="contacto.html" class="transition">CONTACTO</a></li>
+            <li><a href="barucck.html" class="transition">BARUCCK</a></li>
+            <li><a ef="pyme.html" class="transition">PYME</a></li><!-- 
+            <li><a ef="blog.html" class="transition">BLOG</a></li> -->
+            <li><a href="contacto.html" class="transition">CONTACTO</a></li>
           </ul>
         </nav>
       </div>
