--- a/nuevoBarucck/index.html
+++ b/nuevoBarucck/index.html
@@ -32,19 +32,19 @@
       <!-- end video-bg -->
 
       <div class="table cd-section-nav ">
-        <div class="inner">
-          <nav>
-            <ul id="menu-animate">
-              <li><a href="index.html" >HOME</a></li>
-              <li><a href="servicios.html">SERVICIOS</a></li>
-              <li><a ef="barucck.html" class="transition">BARUCCK</a></li>
-              <li><a ef="pyme.html" class="transition">TU GRAN PYME</a></li>
-              <li><a ef="blog.html" class="transition">BLOG</a></li>
-              <li><a ef="contacto.html" class="transition">CONTACTO</a></li>
-            </ul>
-          </nav>
-        </div>
+      <div class="inner">
+        <nav>
+          <ul>
+            <li><a href="index.html" >HOME</a></li>
+            <li><a href="servicios.html">SERVICIOS</a></li>
+            <li><a href="barucck.html" class="transition">BARUCCK</a></li>
+            <li><a ef="pyme.html" class="transition">PYME</a></li><!-- 
+            <li><a ef="blog.html" class="transition">BLOG</a></li> -->
+            <li><a href="contacto.html" class="transition">CONTACTO</a></li>
+          </ul>
+        </nav>
       </div>
+    </div>
     </div>
     <!--ON MOVIL-->
       <nav class="navbar navbar-default  ">
@@ -77,9 +77,9 @@
               <ul>
                 <li data-transition="parallaxhorizontal" data-masterspeed="1200"> <img src="img/alveena-2.jpg" alt="Image">
                   <div class="tp-caption"
-              data-x="left"
+              data-x="50"
               data-y="center"
-              data-voffset="-21"
+              data-voffset="-50"
               data-customout="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0.75;scaleY:0.75;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;"
               data-speed="300"
               data-start="500"
@@ -91,7 +91,7 @@
                     <h2 style="color: #2d3436; font-weight: 700; font-size: 4em;">DISEÑO</h2>
                   </div>
                   <div class="tp-caption"
-              data-x="left"
+              data-x="50"
               data-y="center"
               data-voffset="20"
               data-customin="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0;scaleY:0;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;"
@@ -107,7 +107,7 @@
                     <h5 style="color: #2d3436; font-weight: 400; font-size:2em;">ALGUN TEXTO</h5>
                   </div>
                   <div class="tp-caption"
-              data-x="left"
+              data-x="50"
               data-y="center"
               data-voffset="80"
               data-customin="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0;scaleY:0;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;"
@@ -124,9 +124,9 @@
                 <!-- end banner 1 -->
                 <li data-transition="parallaxhorizontal" data-masterspeed="1200"> <img src="img/form.jpg" alt="Image">
                   <div class="tp-caption"
-              data-x="left"
+              data-x="50"
               data-y="center"
-              data-voffset="-21"
+              data-voffset="-50"
               data-customout="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0.75;scaleY:0.75;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;"
               data-speed="300"
               data-start="500"
@@ -138,7 +138,7 @@
                     <h2 style="color: #2d3436; font-weight: 700; font-size: 4em;">REDES</h2>
                   </div>
                   <div class="tp-caption"
-              data-x="left"
+              data-x="50"
               data-y="center"
               data-voffset="20"
               data-customin="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0;scaleY:0;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;"
@@ -155,7 +155,7 @@
                   </div>
 
                   <div class="tp-caption"
-              data-x="left"
+              data-x="50"
               data-y="center"
               data-voffset="80"
               data-customin="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0;scaleY:0;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;"
@@ -172,9 +172,9 @@
                 <!-- end banner 2 -->
                 <li data-transition="parallaxhorizontal" data-masterspeed="1200"> <img src="img/jrc.jpg" alt="Image">
                   <div class="tp-caption"
-              data-x="left"
+              data-x="50"
               data-y="center"
-              data-voffset="-21"
+              data-voffset="-50"
               data-customout="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0.75;scaleY:0.75;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;"
               data-speed="300"
               data-start="500"
@@ -186,7 +186,7 @@
                     <h2 style="color: #fff; font-weight: 700; font-size: 4em;">eCommerce</h2>
                   </div>
                   <div class="tp-caption"
-              data-x="left"
+              data-x="50"
               data-y="center"
               data-voffset="20"
               data-customin="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0;scaleY:0;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;"
