--- a/nuevoBarucck/servicios.html
+++ b/nuevoBarucck/servicios.html
@@ -41,9 +41,9 @@
             <li><a href="index.html" >HOME</a></li>
             <li><a href="servicios.html">SERVICIOS</a></li>
             <li><a href="barucck.html" class="transition">BARUCCK</a></li>
-            <li><a ef="pyme.html" class="transition">TU GRAN PYME</a></li>
-            <li><a ef="blog.html" class="transition">BLOG</a></li>
-            <li><a ef="contacto.html" class="transition">CONTACTO</a></li>
+            <li><a ef="pyme.html" class="transition">PYME</a></li><!-- 
+            <li><a ef="blog.html" class="transition">BLOG</a></li> -->
+            <li><a href="contacto.html" class="transition">CONTACTO</a></li>
           </ul>
         </nav>
       </div>
@@ -160,7 +160,7 @@
                       <div class="large">
                          <h3 class="font-large hover">
                            <svg xmlns="http://www.w3.org" viewBox="0 0 1310 720">
-                            <text id="diseño" text-anchor="middle" x="50%" y="50%" style="font-size: 3.1em;">eCommerce.</text>
+                            <text id="diseño" text-anchor="middle" x="50%" y="50%" style="font-size: 3.1em;">ECOMMERCE.</text>
                           </svg>
                         </h3>
                       </div>
@@ -192,16 +192,16 @@
           <div class="section design" id="section3">
               <div class="slide" data-anchor="slide3">
                   <div class="container ">
-                    <div class="col-md-6">
+                    <div class="col-md-5">
                       <div class="large">
                          <h3 class="font-large hover">
                            <svg xmlns="http://www.w3.org" viewBox="0 0 1310 720">
-                            <text id="diseño" text-anchor="middle" x="50%" y="50%" style="font-size: 3.1em;">Social.</text>
+                            <text id="diseño" text-anchor="middle" x="50%" y="50%" style="font-size: 4em;">SOCIAL.</text>
                           </svg>
                         </h3>
                       </div>
                     </div>
-                  <div class="col-md-6 top lists info-service ">
+                  <div class="col-md-7 top lists info-service ">
                     <p class="wow fadeInUp" data-wow-delay="0.80s">Aumenta tus ventas de una manera eficaz y vanguardista a través de un nuevo canal digital. Vender en línea es hoy ya un modelo de negocio exitoso probado, al que personas quieren incursionar, nosotros te apoyamos con:</p>
                       <div class="col-md-6">
                         <ul class="wow fadeInUp" data-wow-delay="1s">
