--- a/nuevoBarucck/barucck.html
+++ b/nuevoBarucck/barucck.html
@@ -15,11 +15,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/estilosfullpage.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" >
-    <style type="text/css" media="screen">
-      #scroll-down::before{
-       background: #fff;
-      }
-    </style>
+   
 
   </head>
   <body>
@@ -27,7 +23,6 @@
     <div class="loading">
       <div class="loader">
        <h2 class="loading-text cd-headline clip is-full-width"> <span class="cd-words-wrapper"> <b class="is-visible">¡Esto es creatividad!</b> <b>BARUCCK</b></span> </h2>
-        <div class="loading-image"><i class="fas fa-circle-notch fa-spin fa-4x"></i></div>
       </div>
     </div>
     <!-- end loader -->
@@ -43,10 +38,10 @@
           <ul>
             <li><a href="index.html" >HOME</a></li>
             <li><a href="servicios.html">SERVICIOS</a></li>
-            <li><a ef="barucck.html" class="transition">BARUCCK</a></li>
-            <li><a ef="pyme.html" class="transition">PYME</a></li>
-            <li><a ef="blog.html" class="transition">BLOG</a></li>
-            <li><a ef="contacto.html" class="transition">CONTACTO</a></li>
+            <li><a href="barucck.html" class="transition">BARUCCK</a></li>
+            <li><a ef="pyme.html" class="transition">PYME</a></li><!-- 
+            <li><a ef="blog.html" class="transition">BLOG</a></li> -->
+            <li><a href="contacto.html" class="transition">CONTACTO</a></li>
           </ul>
         </nav>
       </div>
@@ -56,12 +51,12 @@
     <nav class="navbar navbar-default  ">
         <div class="row">
           <div class="col-xs-12">
-            <a href="#"><img class="logo" src="img/logo1-white.png"></a>
-            <div class="hamburger-menu white">MENÚ
-              <span class="color" ></span>
-              <span class="color" ></span>
-              <span class="color" ></span>
-              <span class="color" ></span>
+            <a href="#"><img class="logo" src="img/logo1.png"></a>
+            <div class="hamburger-menu ">MENÚ
+              <span  ></span>
+              <span  ></span>
+              <span  ></span>
+              <span  ></span>
 
             </div>
           <!--  <ul  class="hide">
@@ -76,10 +71,10 @@
         </div>
     </nav>
       <div id="scroll-wrapper-inner">
-            <div id="scroll-title" style="color: #fff;">
+            <div id="scroll-title" >
               Scroll
             </div>
-            <div id="scroll-down" class="white">
+            <div id="scroll-down">
           </div>
       </div>
       <div class="main">
@@ -92,10 +87,10 @@
               </div>
             </div>
         </section>
-        <section id="nosotros" class="section-nosotros">
+        <section  class="section-nosotros">
           <div class="container">
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-md-6 col-xs-12">
                  <h2 class="font-large hover wow fadeInUp" data-wow-delay="0.8s" >
                     <svg xmlns="http://www.w3.org" viewBox="0 0 1280 920" >
                      <text id="text" class="show-text"  x="50%" y="50%"> <tspan  x="0" y="250">BARUCCK</tspan> 
@@ -104,7 +99,7 @@
                    </svg>
                  </h2>
               </div>
-              <div class="col-md-6">
+              <div class="col-md-6 col-xs-12">
                 <h3 style="line-height: 40px; text-align: justify;" class="wow fadeInUp" data-wow-delay="0.8s">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -116,7 +111,7 @@
           </div>
         </section>
 
-        <section id="nosotros" class="section-tecnologias">
+        <section class="section-tecnologias">
           <div class="container">
             <div class="row">
               <div class="col-md-12">
@@ -136,7 +131,7 @@
           </div>
         </section>
         
-        <section id="nosotros" class="section-clientes">
+        <section class="section-clientes">
           <div class="container">
             <div class="row">
               <div class="col-md-12 padding">
