--- a/nuevoBarucck/contacto.html
+++ b/nuevoBarucck/contacto.html
@@ -38,10 +38,10 @@
           <ul>
             <li><a href="index.html" >HOME</a></li>
             <li><a href="servicios.html">SERVICIOS</a></li>
-            <li><a ef="barucck.html" class="transition">BARUCCK</a></li>
-            <li><a ef="pyme.html" class="transition">PYME</a></li>
-            <li><a ef="blog.html" class="transition">BLOG</a></li>
-            <li><a ef="contacto.html" class="transition">CONTACTO</a></li>
+            <li><a href="barucck.html" class="transition">BARUCCK</a></li>
+            <li><a ef="pyme.html" class="transition">PYME</a></li><!-- 
+            <li><a ef="blog.html" class="transition">BLOG</a></li> -->
+            <li><a href="contacto.html" class="transition">CONTACTO</a></li>
           </ul>
         </nav>
       </div>
@@ -88,23 +88,25 @@
                       <div class='col-xs-12'>                       
                           <p class='subtitle'>Hola.</p>
                       </div>
-                      <!-- <div class='col-xs-2 col-md-1 text-right'>
-                          <div class='active path-step' data-position='1'></div>
+                      <!-- <div class='col-xs-2 col-md-1 text-right' style="margin-top: 150px">
+                               <div class='active path-step' data-position='1'></div>
                           <div class='path-step' data-position='2'></div>
-                          <div class='path-step' data-position='3'></div>
+                          <div class='path-step' data-position='3'></div> 
                       </div> -->
-                      <div class='col-md-12' style="margin-top: 150px">
+                      <div class='col-md-12 ' style="margin-top: 150px">
                           <div class='fieldset step active'>
-                            <input class='input' name='name' placeholder='¿Tu nombre es?' required type='text'>
+                            <input class='input' name='name' placeholder='Coloca tu nombre aqui...' required type='text'>
                           </div>
                           <div class='fieldset step'>
-                            <input class='input' name='correo' placeholder='Dime tu correo..' required type='correo'>
+                            <input class='input' name='correo' placeholder='Dime tu correo...' required type='correo'>
                           </div>
                           <div class='fieldset step'>
-                            <textarea class='input' name='textarea' placeholder='¿En que te podemos ayudar?' required></textarea>
+                            <textarea class='input' name='textarea' placeholder='¿Para que somos buenos?' required></textarea>
                             <p class=' text-left' id='info' style="text-align: right; font-size: 2em; margin-top: 10px;">Enter Enviar</p>
-                          </div>                       
+                          </div>  
+
                       </div>
+                                          
                     </div>
                   </form>
               </div>
